--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -33,3 +33,16 @@ jobs:
         run: |
           docker build -t decazed/eval-docker-db -f ./db/Dockerfile ./db
           docker push decazed/eval-docker-db
+
+      - name: Send notification to Discord
+        uses: tsickert/discord-webhook@v5
+        with:
+          webhook-url: ${{ secrets.DISCORD_WEBHOOK }}
+          username: "GitHub Actions"
+          avatar-url: "https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png"
+          content: |
+            🚀 **Nouvelle image Docker publiée !**
+            🔹 Web: `decazed/eval-docker-web`
+            🔹 DB: `decazed/eval-docker-db`
+            🔹 Version: `${{ github.ref_name }}`
+            🔹 Docker Hub: [Web](https://hub.docker.com/r/decazed/eval-docker-web) | [DB](https://hub.docker.com/r/decazed/eval-docker-db)
